# charmania

./: CMakeLists.txt  README.md  README.txt
client/: CMakeLists.txt
client/src/: main.cpp
client/src/graphic/: graphicsscene.cpp  graphicsscene.h  mainwindow.cpp  mainwindow.h
common/src/data/: map.cpp  map.h
server/: CMakeLists.txt
server/src/: main.cpp
